Fix logo.svg space on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1584,7 +1584,7 @@ input, select, textarea {
 			}
 
 			#wrapper:before {
-				left: 23%;
+				left: 21%;
 			}
 
 	}
